--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table class="table caption-top">
+	<table class="table caption-top table-hover table-responsive">
         <caption>List of all transactions</caption>
         <thead class="table-dark">
             <tr>
@@ -39,12 +39,12 @@
                 <td>2000</td>
             </tr>
         </tbody>
-        <tfoot class="table-group-divider" id="total">
-            <tr class="table-light font-monospace,text-end, fw-bold">
+        <tfoot  id="total" class="table-light table-group-divider">
+            <tr class=" font-monospace,text-end, fw-bold">
                 <td></td>
                 <td></td>
                 <td></td>
-                <td>Total= 4500</td>
+                <td >Total= 4500</td>
             </tr>
         </tfoot>
     </table>
