--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
                 <td>2000</td>
             </tr>
         </tbody>
-        <tfoot  id="total" class="table-light table-group-divider">
+        <tfoot colspan="3" id="total" class="table-light table-group-divider">
             <tr class=" font-monospace,text-end, fw-bold">
                 <td></td>
                 <td></td>
